--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "stb"]
 	path = stb
 	url = https://github.com/nothings/stb
+[submodule "gif-h"]
+	path = gif-h
+	url = https://github.com/charlietangora/gif-h.git
